# squares

./: .gitignore  Cargo.toml  README.md  TODO.md  sa_8_animation.json
docs/: 1_genetic_algorithm.md  animation-plan.md
outputs/json/: demo_12_squares.json  ga_8_test.json  sa_4_test.json  sa_5_test.json  test_organized.json
src/: animation.rs  animation_renderer.rs  genetic.rs  geometry.rs  main.rs  output_manager.rs  solver.rs  video_generator.rs  visualization.rs
