[package]
name = "square-packing"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rayon = "1.8"
plotters = "0.3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
